[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rayon = "1.8.0"
regex = "1.10.2"

[[bin]]
name = "d_one"
path = "src/d_one.rs"

[[bin]]
name = "d_two"
path = "src/d_two.rs"

[[bin]]
name = "d_three"
path = "src/d_three.rs"

[[bin]]
name = "d_four"
path = "src/d_four.rs"

[[bin]]
name = "d_five"
path = "src/d_five.rs"
